; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/xfs/quota/extr_xfs_qm.c_xfs_qm_need_dqattach.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/xfs/quota/extr_xfs_qm.c_xfs_qm_need_dqattach.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.xfs_inode = type { i64, %struct.xfs_mount* }
%struct.xfs_mount = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.xfs_inode*)* @xfs_qm_need_dqattach to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @xfs_qm_need_dqattach(%struct.xfs_inode* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.xfs_inode*, align 8
  %4 = alloca %struct.xfs_mount*, align 8
  store %struct.xfs_inode* %0, %struct.xfs_inode** %3, align 8
  %5 = load %struct.xfs_inode*, %struct.xfs_inode** %3, align 8
  %6 = getelementptr inbounds %struct.xfs_inode, %struct.xfs_inode* %5, i32 0, i32 1
  %7 = load %struct.xfs_mount*, %struct.xfs_mount** %6, align 8
  store %struct.xfs_mount* %7, %struct.xfs_mount** %4, align 8
  %8 = load %struct.xfs_mount*, %struct.xfs_mount** %4, align 8
  %9 = call i32 @XFS_IS_QUOTA_RUNNING(%struct.xfs_mount* %8)
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %12, label %11

11:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %43

12:                                               ; preds = %1
  %13 = load %struct.xfs_mount*, %struct.xfs_mount** %4, align 8
  %14 = call i32 @XFS_IS_QUOTA_ON(%struct.xfs_mount* %13)
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %17, label %16

16:                                               ; preds = %12
  store i32 0, i32* %2, align 4
  br label %43

17:                                               ; preds = %12
  %18 = load %struct.xfs_mount*, %struct.xfs_mount** %4, align 8
  %19 = load %struct.xfs_inode*, %struct.xfs_inode** %3, align 8
  %20 = call i32 @XFS_NOT_DQATTACHED(%struct.xfs_mount* %18, %struct.xfs_inode* %19)
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %23, label %22

22:                                               ; preds = %17
  store i32 0, i32* %2, align 4
  br label %43

23:                                               ; preds = %17
  %24 = load %struct.xfs_inode*, %struct.xfs_inode** %3, align 8
  %25 = getelementptr inbounds %struct.xfs_inode, %struct.xfs_inode* %24, i32 0, i32 0
  %26 = load i64, i64* %25, align 8
  %27 = load %struct.xfs_mount*, %struct.xfs_mount** %4, align 8
  %28 = getelementptr inbounds %struct.xfs_mount, %struct.xfs_mount* %27, i32 0, i32 0
  %29 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %28, i32 0, i32 0
  %30 = load i64, i64* %29, align 8
  %31 = icmp eq i64 %26, %30
  br i1 %31, label %41, label %32

32:                                               ; preds = %23
  %33 = load %struct.xfs_inode*, %struct.xfs_inode** %3, align 8
  %34 = getelementptr inbounds %struct.xfs_inode, %struct.xfs_inode* %33, i32 0, i32 0
  %35 = load i64, i64* %34, align 8
  %36 = load %struct.xfs_mount*, %struct.xfs_mount** %4, align 8
  %37 = getelementptr inbounds %struct.xfs_mount, %struct.xfs_mount* %36, i32 0, i32 0
  %38 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %37, i32 0, i32 1
  %39 = load i64, i64* %38, align 8
  %40 = icmp eq i64 %35, %39
  br i1 %40, label %41, label %42

41:                                               ; preds = %32, %23
  store i32 0, i32* %2, align 4
  br label %43

42:                                               ; preds = %32
  store i32 1, i32* %2, align 4
  br label %43

43:                                               ; preds = %42, %41, %22, %16, %11
  %44 = load i32, i32* %2, align 4
  ret i32 %44
}

declare dso_local i32 @XFS_IS_QUOTA_RUNNING(%struct.xfs_mount*) #1

declare dso_local i32 @XFS_IS_QUOTA_ON(%struct.xfs_mount*) #1

declare dso_local i32 @XFS_NOT_DQATTACHED(%struct.xfs_mount*, %struct.xfs_inode*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
